--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -1,213 +1,189 @@
 {{scroll-to position=0}}
 
-<section class="max-width auto-margin rock-and-roll-ember">
-
-  {{#box-content classNames="center margin-left-right-30px margin-bottom-80px"}}
-    <h2 class="heading">
-      Learn to implement authentication with the author of <i>Rock and Roll with Ember</i> and EmberSherpa.
-    </h2>
-
-    <p class="margin-bottom-80px">
-      This complete introduction to authentication will tell you everything you need to know to implement
-      <strong>Username / Password</strong> and <strong>oAuth 2.0</strong> authentication scenarios.
-      This training will consist of pre-recorded videos, a live hands-on workshop and post workshop implementation support.
-    </p>
-
-  {{/box-content}}
-
-
-  <div class="rocker-gabby-callout">
-    <h2>
-      Authentication is not simple. This course will have you and your Ember app rocking some serious login chops in no time.
-    </h2>
-  </div>
-
-  {{#box-content
-    classNames="margin-left-right-30px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-Player.png"
-  }}
-  <h2>Authentication Fundamentals Videos <span class="release-date">August 11th</span></h2>
-  <p>
-    You will receive access to pre-recorded videos 7 days before the workshop. <br>
-    These videos will cover the following topics:
-  </p>
-  <ul class="video-list">
-    <li>Introduction to authentication and authorization</li>
-    <li>Introduction to OAuth 2.0</li>
-    <li>Introduction to ember-simple-auth</li>
-    <li>Introduction to Torii</li>
-  </ul>
-  {{/box-content}}
-
-  {{#box-content classNames="margin-bottom-80px margin-left-right-30px"}}
-    <p>
-      As you view them, you'll' write down your questions as they occur, or later on as your subconscious mind continues to work. We'll collect all the questions beforehand to allow our instructor to dive right into the details that are most relevant to the group.
-    </p>
-  {{/box-content}}
-
-  <div class="key-message">
-    <h2>
-      Our videos are tightly edited and offer a deep dive into all aspects of authentication.
-    </h2>
-  </div>
-
-  {{#box-content
-    classNames="margin-left-right-30px margin-bottom-80px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-Monitor.png"
-  }}
-    <h2 class="clearfix">Interactive Workshop <span class="release-date">August 18th<br>12pm - 4pm EST</span></h2>
-    <p>
-      In the online workshop we'll spend ALL of our time working on a project,
-      adding authentication to an existing application. The goal of
-      is for you to gain first hand experience implementing authentication.
-      You will see real code and work on real problems.
-    </p>
-  {{/box-content}}
-
-  {{#box-content
-    classNames="margin-bottom-80px rare-lightning-background"
-  }}
-    <p>
-      Our workshop is open to a <span class="red">LIMITED</span> number of seats in order to <br>
-      ensure learners can get their questions answered by our instructors & mentors. <br>
-    </p>
-  {{/box-content}}
-
-  {{#box-content
-    classNames="margin-left-right-30px margin-bottom-80px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-notebook.png"
-  }}
-    <h2 class="clearfix">Implementation Support <span class="release-date">August 18 - 25th</span></h2>
-    <p>
-      Putting what you learn to practice is the real test. After the workshop, you'll continue to have access
-      to our Slack channel and a remote pair programming session. Ask questions, or clarify details
-      as you apply what you learned to your application. During your pairing session, you can get a code review
-      or get help with a complex integration.
-    </p>
-  {{/box-content}}
-
-  <hr class="red-line margin-bottom-80px">
-
-  {{#box-content
-    classNames="margin-left-right-30px margin-bottom-30px"
-  }}
-    <h2 class="center margin-bottom-30px">Your Instructors</h2>
-
-    <div class="two-columns">
-      <div class="column margin-bottom-30px">
-        <img src="https://embermeetup.com/wp-content/uploads/RARE-Balint.png" alt="Balint Erdi's portrait"/>
-        <h3>Balint Erdi</h3>
-        <p>Balint helped thousands of people become Ember developers with the <i>Rock and Roll with Ember</i> book.</p>
-      </div>
-      <div class="column margin-bottom-30px">
-        <img src="https://embermeetup.com/wp-content/uploads/RARE-EmberSherpa.png" alt="Taras' portrait"/>
-        <h3>Taras Mankovski<br> (aka EmberSherpa)</h3>
-        <p>Taras spent the last 3 years helping people learn Ember.</p>
-      </div>
-    </div>
-  {{/box-content}}
-
-  <div class="schedule">
-    <h2>Schedule</h2>
-
-    <dl class="date-list">
-      <div class="row">
-        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt>
-        <dd>Access to Authentication Fundamentals Videos</dd>
-      </div>
-      <div class="row">
-        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt>
-        <dd>12pm - 4pm EST - Online Workshop</dd>
-      </div>
-      <div class="row">
-        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt>
-        <dd>Implementation Support</dd>
-      </div>
-    </dl>
-  </div>
-
-  {{#box-content}}
-
-    <h2 class="center margin-bottom-80px">Reserve your stop now!</h2>
-
-    <div class="packages-table margin-bottom-80px">
-      <div class="packages-table--plan secondary">
-        <h3 class="header">Training<br> <span class="sub">Videos &amp; Workshop</span></h3>
-        <ul class="content">
-          <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
-          <li class="item workshop-icon">Interactive Workshop</li>
-        </ul>
-        <div class="footer">
-          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>$249.99</button>
-        </div>
-      </div>
-
-      <div class="packages-table--plan primary">
-        <h3 class="header">Training &amp; Support <span class="sub">Complete Package</span></h3>
-        <ul class="content">
-          <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
-          <li class="item workshop-icon"><u>Interactive Workshop</u></li>
-          <li class="item slack-icon"><u>Support Slack Channel (1 week)</u></li>
-          <li class="item screenhero-icon"><u>Pair Programming Session (45 min)</u></li>
-          <li class="item trees-icon">Evergreen Videos (1 year)</li>
-        </ul>
-        <div class="footer">
-          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>Buy Together $349.99</button>
-        </div>
-      </div>
-
-      <div class="packages-table--plan secondary">
-        <h3 class="header">Implementation Support <span class="sub">Chat &amp; Pairing</span></h3>
-        <ul class="content">
-          <li class="item slack-icon"><u>Support Slack Channel (1 week)</u></li>
-          <li class="item screenhero-icon"><u>Pair Programming Session (45 min)</u></li>
-          <li class="item trees-icon">Evergreen Videos (1 year)</li>
-        </ul>
-        <div class="footer">
-          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>$249.99</button>
+<section class="training-header">
+  <div class="page-wrap">
+    <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+      <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+        <div class="wistia_embed wistia_async_bprp4egb1x videoFoam=true" style="height:100%;width:100%">
+          &nbsp;
         </div>
       </div>
     </div>
+  </div>
+  <div class="training-summary">
+    <div class="page-wrap">
+      <p>
+        <strong>3-part course over 3 weeks</strong> including pre-recorded videos, interactive workshop and post workshop support
+      </p>
+      <p>
+        Upcoming series on Dec 13th, Jan 12th and Jan 18th
+      </p>
+      <p>
+        Available in local timezones for Asia, Europe and Americas
+      </p>
+    </div>
+  </div>
+</section>
 
-    {{#with 'August 16, 2016' as |earlyBird|}}
-      {{#if (moment-is-before (now) earlyBird)}}
-        <div class="early-bird margin-bottom-80px">
-          <div class="main">
-            <button class="button call-to-action" {{action (toggle "showTickets" this)}}>Early Bird $299.99</button>
-          </div>
-          <div class="right">
-            - {{moment-from-now earlyBird hideSuffix=true}} left
-          </div>
-        </div>
-      {{/if}}
-    {{/with}}
+<section class="training-will-learn page-wrap training-section">
 
-  {{/box-content}}
+  <h2>What you'll learn</h2>
+  <div class="section-content">
+    <ul>
+      <li>How to authenticate users with <strong>Username &amp; Password</strong> and <strong>oAuth 2</strong></li>
+      <li>Learn the difference between <strong>Authentication</strong> and <strong>Authorization</strong></li>
+      <li>Learn how to use <strong>Torii</strong> and <strong>Ember Simple Auth</strong> In your application</li>
+      <li>Understand common security considerations of different authentication scenarios</li>
+      <li>Understand the difference between <strong>Implicit Grant</strong> and <strong>Resource Owner Password Credentials</strong> flows</li>
+      <li>How to manage authentication session in Ember applications</li>
+    </ul>
+    <span class="gabby-rocker">
+      Rock and roll with ember!
+    </span>
+  </div>
+</section>
 
-  <hr class="red-line margin-bottom-80px">
+<section class="training-section training-perfect-for">
+  <div class="page-wrap">
+    <h2>This course is perfect for...</h2>
+    <div class="section-content">
+      <div class="perfect-for">
+        <p>
+          We will prepare you for building authentication into your application and give you the confidence to know that you understand all common approaches to authentication.
+        </p>
+        <p>
+          Most of our students are either building their first Ember application or working in professional environments. This course requires basic familiarity with Ember and different elements of Ember applications.
+        </p>
+      </div>
+      <aside class="testimonials">
+        <blockquote>
+          <p>
+            Thank you so much @balint and @mauty, was a definitely worth the time and money.
+          </p>
+          <footer>
+            <span class="photo">
+              <img src="/assets/images/rare/philip.png" alt="" />
+            </span>
+            Philip <br> Southam
+          </footer>
+        </blockquote>
+        <blockquote>
+          <p>
+            The concept videos before the talk were a big help; if anyone missed those I'd suggest taking a look.
+          </p>
+          <footer>
+            <span class="photo">
+              <img src="/assets/images/rare/nicholas.png" alt="" />
+            </span>
+            Nicholas <br> Rutherford
+          </footer>
+        </blockquote>
+        <blockquote>
+          <p>
+            This workshop is the fastest way to become comfortable with authentication in Ember applications.
+          </p>
+          <footer>
+            <span class="photo">
+              <img src="/assets/images/rare/taras.jpg" alt="" />
+            </span>
+            Taras <br> Mankovski
+          </footer>
+        </blockquote>
+      </aside>
+    </div>
+  </div>
+</section>
 
-  {{#box-content
-    classNames="margin-left-right-30px margin-bottom-80px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-trees.png"
+<section class="page-wrap training-general training-section">
+  <div class="about-trainer">
+    <div class="instructor">
+      <h2>Who will teach you?</h2>
+      <img src="https://embermeetup.com/wp-content/uploads/RARE-Balint.png" alt="Balint Erdi's portrait"/>
+      <p>Balint Erdi is a full stack developer. As a teacher, Balint taught thousands of people to learn Ember through his book <em> Rock and Roll with Ember.js</em>.</p>
+    </div>
+    <div class="training-why-us">
+      <h3>Why learn with us?</h3>
+      <p>
+        We believe your time is valuable, so we focus on making our training experience high in information density. We use edited videos to give each learner the fundamentals needed so that everyone in the group is prepared for the workshop. Everyone learns best by doing and this allows our workshops to be 100% exercise based.
+      </p>
+      <h3>How will you learn?</h3>
+      <p>
+        You will receive access to a collection of videos 2 weeks before the online workshop. In the workshop, Balint will take you through a series of exercises to demonstrate and explain how to implement authentication in an Ember app. After the workshop, you’ll receive access to Slack channel where you can ask questions as you add authentication to your app.
+      </p>
+      <h3>What if you have questions?</h3>
+      <p>
+        Because seats are limited, everyone will have a chance to ask questions during the workshop.  After in the Slack channel after the workshop and you get a one-on-one 45 minute pair programming session with a mentor who can answer questions specific to your application.
+      </p>
+    </div>
+  </div>
+  <div class="training-details clearfix">
+    <div class="training-box videos">
+      <h3>What videos are included?</h3>
+      <p>
+        The course includes 25 minutes of video content that introduction to the following topics: authentication and authorization, OAuth 2.0, ember-simple-auth and Torii. Afterwards, you will receive a recording of your live workshop.
+      </p>
+    </div>
+    <div class="training-box rare-book">
+      <h3>New to Ember?</h3>
+      <p>
+        Beginners are welcome, but please go through the Ember Guides before the workshop. To gain deeper understanding of Ember consider reading Balint’s Rock and Roll with Ember.js book.
+      </p>
+    </div>
+    <div class="training-box ember-cli">
+      <h3>What do you need?</h3>
+      <p>
+        You need a computer that has EmberCLI installed, a GitHub account, Chrome and latest version of Ember Inspector.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="page-wrap workshops-section training-section">
+  <h2>Available workshops</h2>
+  <div class="section-content">
+    <ul class="timezones">
+      <li>
+        <h3>Asian timezone</h3>
+        <strong>Dec 13th - 12pm - 4pm JST (GMT+9)</strong><br>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-asian-timezone-tickets-28810984430" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
+      </li>
+      <li>
+        <h3>European timezone</h3>
+        <strong>Jan 12th - 12pm - 4pm BST (GMT)</strong><br>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-european-timezone-tickets-28926698534" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
+      </li>
+      <li>
+        <h3>Americas timezone</h3>
+        <strong>Jan 18th - 12pm - 4pm EST (GMT-5)</strong><br>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-americas-timezone-tickets-28926729627" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
+      </li>
+    </ul>
+    <div class="limited-seats">
+      <strong>Each workshop is limited to 16 participants</strong> in order to ensure learners can get their questions answered by our instructors and mentors.
+    </div>
+    <aside class="more-info">
+      <h3>More info?</h3>
+      Ask us anything by email or DM on twitter: <br> <br>
+      <a href="mailto:hi@embermeetup.com"><i class="fa fa-envelope-o"></i> hi@embermeetup.com</a> <br> <br>
+      <a href="https://twitter.com/EmberMeetup" target="_blank"><i class="fa fa-twitter"></i> EmberMeetup</a>
+    </aside>
+  </div>
+</section>
+
+<section class="training-subscribe training-section">
+  <h3>Can’t make it for these dates?</h3>
+  {{ember-chimp label="Subscribe"
+      placeholder="Your Email Here"
+      formAction="//embersherpa.us12.list-manage.com/subscribe/post?u=81e8e3fa2a6f79fe97467029a&amp;id=05fb609e3f"
+      buttonText="Subscribe"
+      loadingText="Loading"
   }}
-    <h2>Evergreen Videos</h2>
-    <p>
-      We will update and revise our Authentication Fundamentals Videos as Ember's authentication story evolves.
-      Evergreen Videos will give you access to latest versions of the videos as they becomes available.
-      It’s a great way to keep up to date on the developments of Ember’s authentication story.
-    </p>
-  {{/box-content}}
-
-  {{#box-content
-    classNames="margin-bottom-80px rare-lightning-background content-max-width-600px"
-  }}
-    <h2>Prerequisites</h2>
-    <p>
-      This course will build on your understanding of Ember.js and common Ember.js development toolset.
-      You must be comfortable with content that’s covered in Ember Guides and have working familiarity with EmberCLI and Git.
-    </p>
-  {{/box-content}}
-
 </section>
 
 {{#if showTickets}}
@@ -217,10 +193,10 @@
     targetAttachment="center"
     translucentOverlay=true
   }}
-    <iframe  src="//eventbrite.com/tickets-external?eid=26391705301&ref=etckt"
-             frameborder="0" height="400" width="100%" vspace="0"
-             hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
-             allowtransparency="true">
+    <iframe src="//eventbrite.com/tickets-external?eid=28810984430&ref=etckt"
+            frameborder="0" height="308" width="100%" vspace="0"
+            hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
+            allowtransparency="true">
     </iframe>
   {{/modal-dialog}}
 {{/if}}
