--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -1,7 +1,7 @@
 {{scroll-to position=0}}
 
 <section class="training-header">
-  <div class="page-wrap">
+  <div class="page-wrap training-video">
     <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
       <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
         <div class="wistia_embed wistia_async_bprp4egb1x videoFoam=true" style="height:100%;width:100%">
