Fixes safari issue on about section.

--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -269,7 +269,7 @@
   }
   @include media($tablet) {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     .instructor {
       max-width: 33%;
       display: flex;
